<resources>
    <string name="app_name">Anime Navigator</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="tab1">Top Rated</string>
    <string name="tab2">Search</string>
    <string name="tab3">New</string>
    <string name="search_hint">Search by Title, Creator, Theme or Genre</string>
    <string name="rating_tmp">Rating: %s</string>
    <string name="themes_tmp">Themes: %s</string>
    <string name="genres_tmp">Genres: %s</string>
    <string name="titles_tmp">Titles: %s</string>
    <string name="creators_tmp">Creators: %s</string>
    <string name="themes">Themes</string>
    <string name="genres">Genres</string>
    <string name="titles">Titles</string>
    <string name="creators">Creators</string>
    <string name="plot">Plot summary</string>
    <string name="rating">Rating</string>
    <string name="summary">Summary</string>
    <string name="related">Related</string>
    <string name="extra">Extra</string>
    <string name="no_details">Select something from list to see details</string>
    <string name="unknown">unknown</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No reviews</string>
    <string name="links">Links</string>
    <string name="no_links">No links</string>
    <string name="episodes">Episodes</string>
    <string name="no_episodes">No episodes</string>
    <string name="ANN" translatable="false">www.animenewsnetwork.com</string>
    <string name="ANN_URL" translatable="false">http://www.animenewsnetwork.com/encyclopedia/anime.php?id=%s</string>
    <string name="no_related">No related</string>
    <string name="anime_and_manga"><![CDATA[Anime & Manga]]></string>
    <string name="genre_search_prefix">Genres:</string>
    <string name="theme_search_prefix">Themes:</string>
    <string name="loading">Loading</string>
    <string name="content_authority" translatable="false">com.animenavigator.provider</string>
    <string name="account_type" translatable="false">animenavigator.com</string>
    <string name="notification_title">New titles available</string>
    <string name="notification_text_tmp">%s new titles was loaded</string>
    <string name="action_share">Share</string>
    <string name="share_title">Share Anime</string>
    <string name="permission_denied">The app was not allowed to write to your storage. Hence, it cannot function properly. Please consider granting it this permission</string>
    <string name="permission_remainder">Grant permission to write to your storage if you want to share images</string>
    <string name="screenshot_file_tmp" translatable="false">screenshot_anime_%s.png</string>
    <string name="poster_transition">poster_transition</string>
    <string name="favorite">Favorite</string>
    <string name="no_favorite">No favorite anime</string>
    <string name="poster_description">Image of Anime poster or Manga cover</string>
    <string name="start_description">Image of five-pointed star</string>
    <string name="clear_btn_description">Clear search query</string>
    <string name="search_btn_description">Start search</string>
    <string name="pref_enable_notification_key">ENABLE_NOTIFICATIONS</string>
    <string name="pref_enable_notification_title">Notifications</string>
    <string name="settings">Settings</string>
    <string name="empty_list">Empty list</string>
    <string name="top_rated_tab_screen_name" translatable="false">Top Rated Tab</string>
    <string name="search_tab_screen_name" translatable="false">Search Tab</string>
    <string name="new_tab_screen_name" translatable="false">New Tab</string>
    <string name="summary_tab_screen_name" translatable="false">Summary Tab</string>
    <string name="related_tab_screen_name" translatable="false">Related Tab</string>
    <string name="extra_tab_screen_name" translatable="false">Extra Tab</string>
    <string name="settings_activity_screen_name" translatable="false">Settings Activity</string>
    <string name="select_item_category" translatable="false">Select Item</string>
    <string name="show_details_action" translatable="false">Show Details</string>
    <string name="browse_category" translatable="false">Browse</string>
    <string name="share_action" translatable="false">Share</string>
    <string name="add_to_favorite_action" translatable="false">Add to Favorite</string>
    <string name="remove_from_favorite_action" translatable="false">Remove from favorite</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
</resources>
