<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/anime_and_manga"
            android:checked="true"
            android:icon="@drawable/ic_grade_black_18dp"
            android:title="@string/anime_and_manga"
            />
        <item
            android:id="@+id/anime"
            android:checked="true"
            android:icon="@drawable/ic_theaters_black_18dp"
            android:title="@string/anime"
            />
        <item
            android:id="@+id/manga"
            android:checked="true"
            android:icon="@drawable/ic_book_black_18dp"
            android:title="@string/manga"
            />
        <item
            android:id="@+id/favorite"
            android:checked="true"
            android:icon="@drawable/ic_favorite_border_black_18dp"
            android:title="@string/favorite"
            />
    </group>
    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_18dp"
            android:title="@string/settings"
            android:checkable="false"
            android:checked="false"
            />
    </group>
</menu>