<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="6dp"
    app:cardElevation="8dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/item_poster"
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_height"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:orientation="vertical"
                android:layout_gravity="top|start"
                android:gravity="top|start">
                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_gravity="top"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:gravity="start"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/rating_caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:text="@string/rating"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        />
                    <TextView
                        android:id="@+id/item_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:layout_toRightOf="@id/rating_caption"
                        android:layout_toEndOf="@id/rating_caption"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>

                <TextView
                    android:id="@+id/item_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Small"/>

                <TextView
                    android:id="@+id/item_themes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.Small"/>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/creators"
            />
        <TextView
            android:id="@+id/item_creators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:maxLines="3"
            android:ellipsize="end"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/plot"
            />
        <TextView
            android:id="@+id/item_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
    </LinearLayout>
</android.support.v7.widget.CardView>